<resources>
    <string name="app_name">Migratio</string>

    <!-- GLOBAL -->
    <string name="tapToExit">Double tap to exit&#8230;</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="oceania">Oceania</string>
    <string name="america">America</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copied">Copied!</string>

    <!-- FONTS -->
    <string name="fnLogo">berlin_sans_fb_demi_bold.ttf</string>
    <string name="fnTitle">berlin_sans_fb.ttf</string>
    <string name="fnText">din_alternate_bold.otf</string>


    <!-- Panel -->
    <string name="pLogoText">@string/app_name</string>
    <string name="noInternet">Please check your internet connection!</string>
    <string name="tvRVMCE">First you must select at least one country and one criterion;\nTap the below button to do so&#8230;</string>
    <string name="pmRefresh">Refresh Data</string>
    <string name="pmHelp">Help</string>
    <string name="pmAbout">About Us</string>
    <string name="pmSearch">Search</string>
    <string name="pmShareResults">Share Results</string>
    <string name="pHelp">This tool is designed for those who are about to migrate to a new country and want to know which country is the best choice for them.\n\nFirst you have to define some criteria for your desired country; then this tool will create relative percentage scores out of the candidate countries\' rankings and statistics, according to those criteria. In the results\' list, there will always be a country with 100% score which is the best in the list, and also there will always be another country with 0% score which is the worst country in the list, and the others will be listed between them with relative scores.\n\nThis tool will just show you which country is better than the others in the list, even if that country has terrible conditions! Thus everything is relative here.</string>
    <string name="about">Mahdi Parastesh\nE-Mail: fulcrum1378@gmail.com\nInstagram: @fulcrum1378</string>
    <string name="shareResSubject">MIGRATIO Results</string>
    <string name="shareResChooser">Choose how to share the results&#8230;</string>

    <!-- Select -->
    <string name="countries">Countries</string>
    <string name="criteria">Criteria</string>
    <string name="criOption1">Any higher</string>
    <string name="criOption2">Any closer to&#8230;</string>
    <string name="criOption3">Any lower</string>
    <string name="criImportance">Importance:</string>
    <string name="smSelectAll">Select All</string>
    <string name="smDeselectAll">Deselect All</string>
    <string name="smResetAll">Reset All Criteria</string>
    <string name="smHelp">@string/pmHelp</string>
    <string name="smExport">Export Settings</string>
    <string name="smImport">Import Settings</string>
    <string name="sureResetAll">Are you sure you want to reset all the changes you\'ve made in the Criteria section?</string>
    <string name="clcSource">Source</string>
    <string name="dirChosNew">Migratio</string>
    <string name="exportDone">Exporting was completed!</string>
    <string name="exportUndone">Exporting was failed!</string>
    <string name="importOpenError">Unfortunately an error occurred while opening the file!</string>
    <string name="importReadError">Unfortunately an error occurred while reading the file!</string>

    <!-- #DirectoryChooser -->
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Export</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
</resources>
